Alternate visual block bug fix and add fields (image and image alignement)

--- a/assets/css/builder-admin.css
+++ b/assets/css/builder-admin.css
@@ -1,7 +1,13 @@
 /* Styles pour l'interface d'administration du builder */
 
+/* règles générales */
 .hidden {
-    display: none !important;
+    display: none;
+}
+
+/* règles pour le reste des menus WP (en cas de conflit) */
+.wp-list-table {
+    position: initial !important;
 }
 
 .builder-metabox {
@@ -64,7 +70,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 9999; /* S'assurer que la modale est au-dessus de tout le reste */
